--- a/BIT sem-3/Data Management Systems/3.1 Disk Storage and Basic File Structures.md
+++ b/BIT sem-3/Data Management Systems/3.1 Disk Storage and Basic File Structures.md
@@ -279,4 +279,81 @@ When Block size < Records size,
 
 - **Blocking Factor(bfr)** : Number of records(in bytes) can fit into a single disk block.
 If Block size > Record size,
-`bfr` can be calculated using, 
+bfr can be calculated using, 
+$$
+\text{Blocking~Factor(bfr)} = \left\lfloor \frac{Block~Size}{Record~Size} \right\rfloor
+$$
+- It's floor function where round down the number to the nearest integer. 
+There may be some additional space remaining in each block. 
+$$
+\text{Unused Space in bytes} = Block~Size - {bfr} \times{Record~Size}
+$$
+- To minimize the waste of storge, if a part of a record stored in one block and the other part stored in another block, and the next block is not the one holding the remainder of the record, 
+	==a pointer at the end of the first block will be refers to the next block where the remainder is stored in.==
+
+#### Unspanned and Spanned Organization of Records
+- **Unspanned Organization of Records**
+	Not allowing records to span into more than one block.
+	Used with fixed length records.
+	![[Pasted image 20250127203622.png]]
+- **Spanned Organization of Records**
+	One record spans to more than one block.
+	Used when the Record Size > Block size.
+	![[Pasted image 20250127203606.png]]
+
+- In spanned organization, each block may store a different number of records. BFR would be the average number of records in a one block.
+- We can calculate the **number of block needed to store a file with r number of records,**
+$$
+\text{Number~of~blocks(b)} = \left\lceil \frac{\text{Number of records in the file(r)}}{bfr} \right\rceil
+$$
+Ex: 
+	There's a disk with block size(b) = 256bytes.
+	A file has 50,000 fixed-length records(r).
+	Each record has the following fields, 
+	- NAME(55 bytes)
+	- STDID(4 bytes)
+	- DEGREE(2 bytes)
+	- PHONE(10 bytes)
+	- SEX(1 byte)
+1. Record size = $(55 + 4 + 2 + 10 + 1) = 72~bytes$
+2. Blocking factor
+	$= \left\lfloor \frac{Block~Size}{Record~Size} \right\rfloor$
+	$= \left\lfloor \frac{256~bytes}{72~bytes} \right\rfloor$
+	$\text{3 records per block}$
+3. Number of blocks required to store STUDENT records assuming an unspanned organization
+	$= \left\lceil \frac{\text{Number of records in the file(r)}}{bfr} \right\rceil$
+	$= \left\lceil \frac{\text{50,000}}{3} \right\rceil$
+	$= 16667$
+
+****
+- **File Header/File Descriptor** : Includes information about a file that is required by the system applications.
+- For fixed-length unspanned records, These header files contains information 
+	to determine the disk addresses of the blocks, 
+	record format descriptions which may include field length and the order of fields within a record,
+	field type codes, 
+	separator characters, 
+- For Variable-length records, headers may include record type codes. 
+
+****
+#### 3.1.6 File Operations
+- Types of file operations,
+	![[Pasted image 20250127230020.png]]
+![[Pasted image 20250127230128.png]]
+1. Simple Selection Conditions
+	Records where `Emp_No` = '0005'
+2. Complex Selection Conditions
+	Records where `Salary` > 60,000
+
+- When several file records meet a search criterion, the first record in the sequence of file records is identified and assigned as the **Current Record**.
+	Following search operations will start with this record and find the next record in the file that meets the criterion. 
+- File access operations, 
+![[Pasted image 20250127230726.png]]
+![[Pasted image 20250127231351.png]]
+![[Pasted image 20250127231438.png]]
+![[Pasted image 20250127231516.png]]
+![[Pasted image 20250127231847.png]]
+
+- **File Organization** : The way a files data is organized into records, blocks, and access structures, including how records and blocks are put on the storage media and interconnected.
+- **Access Methods** : A set of operations that may be applied to a file. 
+- **Static files** : The files on which modifications are rarely done. 
+- **Dynamic Files** : The files on which modifications are frequently done. 
