--- a/BIT sem-3/Data Management Systems/3.2 Indexing.md
+++ b/BIT sem-3/Data Management Systems/3.2 Indexing.md
@@ -160,3 +160,57 @@ Number of block needed to store the index($b_i$) = ceiling(1000/372) = 3 blocks
 Blocks access to perform a binary search = $\lceil{log_{2}~b_i}\rceil$ = $\lceil{log_{2}~3}\rceil$ = 2
 *****
 #### 3. Secondary Index
+- Provides and additional medium for accessing a data file which already has a primary access.
+- Indexing filed of the secondary index can be,
+	a candidate key(a set of columns in a relational database that uniquely identifies each row),
+	non-key field
+	redundant values
+- Index file has two fields,
+	1. Non-ordering Key field : Has the same data as the non-ordering field in the data file(table)
+	2. A block pointer or a record pointer
+- For a single file, few secondary indexes can be exist and each of them work as an additional method of accessing that file based a specific field. 
+- For a secondary index created on a candidate key, which has unique values for every record in the file, the secondary index will get entries for every record in the data file.
+	In this scenario, Secondary index act as a Dense index which holds key value and block pointer for each record in the data file.
+
+- Same as the primary index, index entries are look like,
+	`<K(i), P(i)>`
+- Binary search can be performed, Since the order of the index file is based on the `K(i)`
+- Block anchors are not useful in secondary index file because the data file is not physically ordered by the values of the secondary key field. 
+	This is the reason to have index entries for each record in the secondary index file.
+
+- Secondary index require more storage since it has index entries for each and every record of the data file. 
+- Secondary index is important because we have to perform linear search without it on that particular field. 
+	For the primary index, binary search can be performed even on the data file because it's physically ordered by the key field. 
+
+- While primary and clustering index gives physical ordering to the data file, Secondary indexes give a **logical ordering** to the data file. 
+
+Ex: If we take the same example in primary index and assume we search for a non-ordering key field V = 9 bytes long, in a file with 300,000 records with a fixed length of 100 bytes. And given block size B =4,096 bytes.
+
+bfr = (B/R) = floor(4096/100) = 40 records per block
+Number of blocks needed to store the data file = 300,000/40 = 7,500 blocks
+
+If we perform linear search, 
+	the required number of block access(on average) = 7500/2 = 3750 block accesses
+
+If we have a secondary index on that non-ordering key filed, with entries for the block pointer P = 6 bytes long.
+	length of an index entry = 9 + 6 = 15 bytes
+	blocking factor(bfr) for the index file = B/R = floor(4096/15) = 273
+Since the secondary index is dense, 
+	number of index entries = number of records in the data file
+	number of index entries = 300,000
+number of block required for secondary index 
+	b = r/bfr
+	b = ceiling(300,000/273)
+	b = 1099
+if we perform binary search on the secondary index,
+	number of block accesses required = $\log_{2}~1099$ = 11 block access
+within 11 block accesses we can locate the key value we are looking for in the secondary index file. Then we can access it's pointer. 
+	Total block access = 11 + 1 = 12 block access
+
+*****
+### Multilevel Indexes
+![[Pasted image 20250129174801.png]]
+- **First Level Index** is an index created to the original data file. 
+- **Second Level Index** is an index created to the first level index.
+- This indexing can go for multiple levels. 
+A multi-level index can be created for any type of first level index(primary, secondary, clustering) as long as the first-level index consist of more than one disk block.
